# hypatia-beef

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  BeefSpace_User.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat  package.json
example/: BeefProj.toml
example/src/: Program.bf
libs/: hypatia.lib
libs/windows/: hypatia.lib  hypatiad.lib
libs/windows/x64/: hypatia.lib  hypatia_d.lib
src/: hypatia.bf
